bookinfo-mysql-ddbb/ossm/bookinfo/vs-bookinfo.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookinfo
  namespace: bookinfo
spec:
  hosts:
  - bookinfo.$EXTERNAL_DOMAIN
  - bookinfo.secure.$EXTERNAL_DOMAIN
  gateways:
  - istio-system/default-gateway
  http:
  - match:
    - uri:
        exact: /productpage
    - uri:
        prefix: /static
    - uri:
        exact: /login
    - uri:
        exact: /logout
    - uri:
        prefix: /api/v1/products
    route:
    - destination:
        host: productpage
        port:
          number: 9080
